--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 <div class="separator" style="clear: both;"><a href="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEiW02yoQ7wSHuxfjysAhoOIJIDdS-5n1R1TwKgTTI7-8ujvStL2SzNV12TFGuCs9BS9MBZSbKz4p8SpQJsKPagWwpHSCmjSzpJFlwmZuqiJaomPgZoSXkW8xDevHi4GwzbEwET13cb2Jqh8bILLDXO99VD2qTkWzy24_yK9VW3RWlmDoxHgrOOPo6zZlFgZ/s1024/logo2.jfif" style="display: block; padding: 1em 0; text-align: center; "><img alt="" border="0" width="320" data-original-height="1024" data-original-width="1024" src="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEiW02yoQ7wSHuxfjysAhoOIJIDdS-5n1R1TwKgTTI7-8ujvStL2SzNV12TFGuCs9BS9MBZSbKz4p8SpQJsKPagWwpHSCmjSzpJFlwmZuqiJaomPgZoSXkW8xDevHi4GwzbEwET13cb2Jqh8bILLDXO99VD2qTkWzy24_yK9VW3RWlmDoxHgrOOPo6zZlFgZ/s320/logo2.jfif"/></a></div>
+<div class="separator" style="clear: both;"><a href="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEiW02yoQ7wSHuxfjysAhoOIJIDdS-5n1R1TwKgTTI7-8ujvStL2SzNV12TFGuCs9BS9MBZSbKz4p8SpQJsKPagWwpHSCmjSzpJFlwmZuqiJaomPgZoSXkW8xDevHi4GwzbEwET13cb2Jqh8bILLDXO99VD2qTkWzy24_yK9VW3RWlmDoxHgrOOPo6zZlFgZ/s1024/logo2.jfif" style="display: block; padding: 1em 0; text-align: center; "><img alt="" border="0" width="320" data-original-height="1024" data-original-width="1024" src="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEiW02yoQ7wSHuxfjysAhoOIJIDdS-5n1R1TwKgTTI7-8ujvStL2SzNV12TFGuCs9BS9MBZSbKz4p8SpQJsKPagWwpHSCmjSzpJFlwmZuqiJaomPgZoSXkW8xDevHi4GwzbEwET13cb2Jqh8bILLDXO99VD2qTkWzy24_yK9VW3RWlmDoxHgrOOPo6zZlFgZ/s320/logo2.jfif"/></a></div>
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -69,7 +70,7 @@
   <h2>Step-by-Step Process</h2>
   <ol>
     <li><strong>Visit the official site:</strong>  
-      Go to <a href="https://www.sbimf.com" target="_blank">www.sbimf.com</a> (or use the SBI Mutual Fund mobile app).</li>
+      Go to <a href="https://sbimf.app/BFE370uTvQxy" target="_blank">www.sbimf.com</a> (or use the SBI Mutual Fund mobile app).</li>
 
     <li><strong>Login or Register:</strong>  
       Existing investors can log in using their PAN or registered mobile number and OTP.  
@@ -123,8 +124,7 @@
 
 <footer>
   <p><strong>Disclaimer:</strong> This content is for informational purposes only and does not constitute financial advice.  
-  Mutual fund investments are subject to market risks. Please read all scheme-related documents carefully before investing.  
-  FinTrust MF Distribution acts as a Mutual Fund Distributor and does not guarantee returns.</p>
+  Mutual fund investments are subject to market risks. Please read all scheme-related documents carefully before investing and does not guarantee returns.</p>
 </footer>
 
 </body>
